tests/snapshots/test__from_fixtures@required__add.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    required: []
  rhs:
    required:
      - value
input_file: tests/fixtures/required/add.json
---
[
    Change {
        path: "",
        change: RequiredAdd {
            property: "value",
        },
    },
]
