tests/snapshots/test__from_fixtures@required__drop.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/required/drop.json
---
[
    Change {
        path: "",
        change: RequiredRemove {
            property: "value",
        },
    },
]
